fix overflow x on page lavel

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -45,4 +45,5 @@ p {
 .app-container {
   background: white;
   width: 100%;
+  overflow-x: hidden;
 }
